added dropdowns to main page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,11 @@
     Choose the languages.
   </h4>
   <!-- dropdown menus and switch button-->
-  <app-dropdown></app-dropdown>
+  <p>
+    From: <app-dropdown></app-dropdown>
+    <!--switch button-->
+    To: <app-dropdown></app-dropdown>
+  </p>
 </div>
 
 <div>
