added switch button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
   <!-- dropdown menus and switch button-->
   <p>
     From: <app-dropdown></app-dropdown>
-    <!--switch button-->
+    <app-switch-button></app-switch-button>
     To: <app-dropdown></app-dropdown>
   </p>
 </div>
