--- a/src/app/switch-button/switch-button.component.html
+++ b/src/app/switch-button/switch-button.component.html
@@ -1,3 +1,9 @@
 <p>
   switch-button works!
 </p>
+
+<div class="btn-group btn-group-toggle">
+  <label class="btn-primary" ngbButtonLabel>
+    <input type="checkbox" ngbButton> Switch
+  </label>
+</div>
