added the components (without formatting)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,13 @@
     What do you want to say?
   </h4>
   <!--input box and helpful phrases-->
+  <app-text-box></app-text-box>
+  <app-key-phrase-button></app-key-phrase-button>
+  <app-key-phrase-button></app-key-phrase-button>
+  <app-key-phrase-button></app-key-phrase-button>
+  <app-key-phrase-button></app-key-phrase-button>
   <!--translate button-->
+  <app-translate-button></app-translate-button>
 </div>
 
 <div>
@@ -32,5 +38,7 @@
     Your translation.
   </h4>
   <!--input box with translation-->
+  <app-text-box></app-text-box>
   <!--complete interaction button-->
+  <app-complete-button></app-complete-button>
 </div>
