--- a/src/app/translate-button/translate-button.component.html
+++ b/src/app/translate-button/translate-button.component.html
@@ -1,3 +1,9 @@
 <p>
   translate-button works!
 </p>
+
+<div class="btn-group btn-group-toggle">
+  <label class="btn-primary" ngbButtonLabel>
+    <input type="checkbox" ngbButton> Translate
+  </label>
+</div>
