--- a/src/app/complete-button/complete-button.component.html
+++ b/src/app/complete-button/complete-button.component.html
@@ -1,3 +1,9 @@
 <p>
   complete-button works!
 </p>
+
+<div class="btn-group btn-group-toggle">
+  <label class="btn-primary" ngbButtonLabel>
+    <input type="checkbox" ngbButton> Complete Interaction
+  </label>
+</div>
