--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   </p>
 </div>
 
-<div>
+<div class="section">
   <h4>
     Choose the languages.
   </h4>
@@ -19,7 +19,7 @@
   </p>
 </div>
 
-<div>
+<div class="section">
   <h4>
     What do you want to say?
   </h4>
@@ -33,7 +33,7 @@
   <app-translate-button></app-translate-button>
 </div>
 
-<div>
+<div class="section">
   <h4>
     Your translation.
   </h4>
