--- a/src/app/switch-button/switch-button.component.html
+++ b/src/app/switch-button/switch-button.component.html
@@ -1,9 +1,5 @@
-<p>
-  switch-button works!
-</p>
-
 <div class="btn-group btn-group-toggle">
   <label class="btn-primary" ngbButtonLabel>
-    <input type="checkbox" ngbButton> Switch
+    <input type="checkbox" ngbButton> <i class="material-icons">swap_horiz</i>
   </label>
 </div>
