--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,11 +24,16 @@
     What do you want to say?
   </h4>
   <!--input box and helpful phrases-->
-  <app-text-box></app-text-box>
-  <app-key-phrase-button></app-key-phrase-button>
-  <app-key-phrase-button></app-key-phrase-button>
-  <app-key-phrase-button></app-key-phrase-button>
-  <app-key-phrase-button></app-key-phrase-button>
+    <app-text-box></app-text-box>
+    <div>
+      <p> 
+        Some helpful phrases:
+        <app-key-phrase-button></app-key-phrase-button>
+        <app-key-phrase-button></app-key-phrase-button>
+        <app-key-phrase-button></app-key-phrase-button>
+        <app-key-phrase-button></app-key-phrase-button>
+      </p>
+    </div>
   <!--translate button-->
   <app-translate-button></app-translate-button>
 </div>
