--- a/src/app/key-phrase-button/key-phrase-button.component.html
+++ b/src/app/key-phrase-button/key-phrase-button.component.html
@@ -1,6 +1,6 @@
 <div class="btn-group btn-group-toggle">
   <label class="btn-primary" ngbButtonLabel>
-    <input type="checkbox" ngbButton> [some key phrase]
+    <input type="checkbox" ngbButton> {{phrase}}
   </label>
 </div>
 
