--- a/src/app/key-phrase-button/key-phrase-button.component.html
+++ b/src/app/key-phrase-button/key-phrase-button.component.html
@@ -1,6 +1,3 @@
-<div class="btn-group btn-group-toggle">
-  <label class="btn-primary" ngbButtonLabel>
-    <input type="checkbox" ngbButton> {{phrase}}
-  </label>
-</div>
-
+<button type="button" class="btn btn-primary">
+  {{phrase}}
+</button>
