--- a/src/app/switch-button/switch-button.component.css
+++ b/src/app/switch-button/switch-button.component.css
@@ -1,15 +1,11 @@
-.btn-group
-{
-    margin: 0px 85px;
-}
-
 .material-icons
 {
     text-align: center;
     font-size: 36px;
 }
 
-.btn-primary
+button
 {
     padding: 0px 12px;
+    margin: 0px 85px;
 }
