--- a/src/app/switch-button/switch-button.component.html
+++ b/src/app/switch-button/switch-button.component.html
@@ -1,5 +1,4 @@
-<div class="btn-group btn-group-toggle">
-  <label class="btn-primary" ngbButtonLabel>
-    <input type="checkbox" ngbButton> <i class="material-icons">swap_horiz</i>
-  </label>
-</div>
+<button type="button" class="btn btn-primary">
+  <i class="material-icons">swap_horiz</i>
+</button>
+
