--- a/src/app/translate-button/translate-button.component.html
+++ b/src/app/translate-button/translate-button.component.html
@@ -1,5 +1,4 @@
-<div class="btn-group btn-group-toggle">
-  <label class="btn-primary" ngbButtonLabel>
-    <input type="checkbox" ngbButton> Translate
-  </label>
-</div>
+<button type="button" class="btn btn-primary">
+  Translate
+</button>
+
