--- a/src/app/complete-button/complete-button.component.html
+++ b/src/app/complete-button/complete-button.component.html
@@ -1,7 +1,5 @@
-<div class="btn-group btn-group-toggle">
-  <label class="btn-primary" ngbButtonLabel>
-      <a href="https://ufl.qualtrics.com/jfe/form/SV_brLHwviC7e2m2tD" target="_blank">
-        <input type="checkbox" ngbButton> Complete Interaction
-      </a>
-    </label>
-</div>
+<button type="button" class="btn btn-primary">
+  <a href="https://ufl.qualtrics.com/jfe/form/SV_brLHwviC7e2m2tD" target="_blank">
+    Complete Interaction
+  </a>
+</button>
