--- a/src/app/dropdown/dropdown.component.html
+++ b/src/app/dropdown/dropdown.component.html
@@ -1,8 +1,10 @@
 <div ngbDropdown class="d-inline-block">
-  <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Toggle dropdown</button>
+  <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>
+    {{dropdownText}}
+  </button>
   <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-    <button class="dropdown-item">Action - 1</button>
-    <button class="dropdown-item">Another Action</button>
-    <button class="dropdown-item">Something else is here</button>
+    <button class="dropdown-item" *ngFor="let language of languages" (click)="selectLanguage(language)">
+      {{language.name}}
+    </button>
   </div>
 </div>
