--- a/src/app/switch-button/switch-button.component.html
+++ b/src/app/switch-button/switch-button.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-primary">
+<button type="button" class="btn btn-primary" (click)="onClick()">
   <i class="material-icons">swap_horiz</i>
 </button>
 
