--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,3 +24,15 @@ p
 {
     display: inline-block;
 }
+
+.text-box
+{
+    margin: 20px 0px;
+    padding: 0px;
+}
+
+textarea
+{
+    width: 100%;
+    height: 150px;
+}
