--- a/src/app/key-phrase-button/key-phrase-button.component.html
+++ b/src/app/key-phrase-button/key-phrase-button.component.html
@@ -1,3 +1,3 @@
-<button type="button" class="btn btn-primary">
+<button type="button" class="btn btn-primary" (click)="onClick()">
   {{phrase}}
 </button>
