--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
   </div>
   <!--translate button-->
   <div class="center">
-    <app-translate-button [toLang]="toLang" [fromLang]="fromLang" [text]="inputText" (clicked)="updateText()" (translatedText)="addTranslatedText($event)" (updateTranslation)="updateTranslation()"></app-translate-button>
+    <app-translate-button [toLang]="toLang" [fromLang]="fromLang" [text]="inputText" (clicked)="updateText()" (updateTranslation)="updateTranslation()"></app-translate-button>
   </div>
 </div>
 
